# Thread-pool

./: .gitignore  CMakeLists.txt  Makefile  README.md  queue.cpp  queue.h  task.h  thread_pool.cpp  thread_pool.h
include/: queue.h  thread_pool.h
src/: function_wrapper.h  queue.h  task.h  thread_pool.cpp  thread_pool.h
tests/: CMakeLists.txt  main.cpp
tests/test_shared_counter/: CMakeLists.txt  test_shared_counter.cpp
tests/test_sum/: CMakeLists.txt  test_sum.cpp
